:memo: NTG-55 enhance: openapi documentation
